--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<h1>Hello Jose, I've been waiting for you...</h1>
+<h1> Welcome to Boats, You can choose to search for a boat, delete your boat, and even update your boat!!!</h1>
 {% endblock %}
