--- a/templates/search.html
+++ b/templates/search.html
@@ -3,7 +3,7 @@
 {% block body %}
     <h2>Search Boats</h2>
     <form action="/search" method="POST">
-        <input type="text" name="search_query" placeholder="Enter boat name or type" required>
+        <input type="text" name="search_query" placeholder="Enter boat id" required>
         <input type="submit" value="Search">
     </form>
 
