--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,9 @@
 
             <li><a href="/">HOME</a></li>
             <li><a href="/search">SEARCH</a></li>
-            <li><a href="/delete">DELETE</a></li>        
+            <li><a href="/delete">DELETE</a></li> 
+            <li><a href="/update">UPDATE</a></li>
+    
           </ul>
         </div>
 
